--- a/src/components/Common/Input/Input.module.css
+++ b/src/components/Common/Input/Input.module.css
@@ -1,7 +1,7 @@
 .inputWrapper {
-  max-width: 250px;
+  max-width: 300px;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -10,4 +10,5 @@
   border: 1px solid #bdbdbd;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin: 0 0.5rem;
 }
